@@ -164,7 +164,8 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc9092.suite',
      'tests.test_rfc9118.suite',
      'tests.test_rfc9174.suite',
-     'tests.test_rfc9189.suite']
+     'tests.test_rfc9189.suite',
+     'tests.test_rfc9215.suite']
 )
 
 
